    - Added new settings for disabling world monster spawns and town control over mob spawns within their walls.
    - Changes to /townyadmin commands for war, neutral, townmobs, worldmobs, devmode and debug. Now use /townyadmin toggle XXX.
v0.72.1:
    - Fix an error on new installs where towny would not auto create the data/worlds/XXX.txt files.
v0.72.2:
    - Fixed a few typos in the language file.
    - Changed loading system to now reload ALL Towny data on the '/townyadmin reload' command.
    - Fixed an error of Nation/Towns/Residents data files not being correctly updated on a change. Fixes the error when using Inactive resident deletion.
    - '/town toggle public' now works as intended.
    - Fixed reading of town and nation level data from the yml. It actually reads it now.
    - Fixed an error with '/towny unclaim all' causing an error and corrupting a town save file.
    - Fixed '/town claim' when you have previously unclaimed all it wouldn't allow you to claim with an error of not attached to town message.
    - Prevented setting negative plot costs and taxes.
    - Added a town/nation upkeep modifier to the townLevel and nationLevel settings.
      You can now adjust the cost for upkeep based upon the level of the town/nation eg. (price_town_upkeep * modifier).
    - Fixed Health regen in towns to correctly display in the Admin panel.
    - Fixed the connection to Essentials for using teleport timers.
    - Fixed an error where a player leaving town could sometimes not correctly update the old town data file.
    - Fixed a typo causing Nation levels to not load.
    - Fixed players leaving towns not causing the town data to be updated.
    - Fixed players have to relog after leaving a town before they could join another.
    - Added chests and furnaces to the item_use_id's (now protected by permission flags).
    - changed the default setting for town mob removal to 'true'.