@@ -334,5 +334,6 @@ v0.72.2:
     - Fixed a typo causing Nation levels to not load.
     - Fixed players leaving towns not causing the town data to be updated.
     - Fixed players have to relog after leaving a town before they could join another.
-    - Added chests and furnaces to the item_use_id's (now protected by permission flags).
+    - Added chests and furnaces to the switch_id's (now protected by permission flags).
     - changed the default setting for town mob removal to 'true'.
+    - Added a new setting of 'cheat_protection' to prevent fly and double jump cheats.
